# shopscrap

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  RELEASE.md  docker-compose.yml  pyproject.toml
config/: settings.yaml
docker/: Dockerfile.dev
docs/: api.md  architecture.md  credential.md  flow-e2e.md
docs/backlog/: high-login-pipeline.md  medium-database-implementation.md
docs/captcha/: README.md  html-sample.html  interface.md  selectors.md  solving-strategy.md
extension/: manifest.json
extension/src/background/: service-worker.js
extension/src/content/: interceptor-main.js  interceptor.js
extension/src/popup/: popup.css  popup.html  popup.js
protos/: shopee.proto
scripts/: release.sh
src/shopee_scraper/: __init__.py  __main__.py  cli.py  exceptions.py
src/shopee_scraper/api/: __init__.py  auth.py  dependencies.py  enums.py  jobs.py  main.py  rate_limiter.py  schemas.py
src/shopee_scraper/api/routes/: __init__.py  extension.py  health.py  jobs.py  products.py  reviews.py  session.py  websocket.py
src/shopee_scraper/core/: __init__.py  browser.py  scraper.py  session.py
src/shopee_scraper/extension/: __init__.py  bridge.py  manager.py  protocol.py
src/shopee_scraper/extractors/: __init__.py  base.py  product.py  review.py  search.py
src/shopee_scraper/grpc/: __init__.py  server.py  servicer.py
src/shopee_scraper/models/: __init__.py  output.py
src/shopee_scraper/services/: __init__.py  cache.py  scraper_service.py
src/shopee_scraper/storage/: __init__.py  base.py  database.py  json_storage.py  models.py  scrape_logger.py
src/shopee_scraper/utils/: __init__.py  captcha_solver.py  config.py  constants.py  health_checker.py  logging.py  network_interceptor.py  parsers.py  proxy.py  rate_limiter.py  system_monitor.py  transformer.py
tests/: __init__.py  conftest.py
tests/integration/: test_api_endpoints.py  test_extension_websocket.py  test_scrape_limited.py  test_storage.py
tests/unit/: test_api_auth.py  test_api_jobs.py  test_browser.py  test_cache.py  test_config.py  test_extension_bridge.py  test_extension_manager.py  test_extension_protocol.py  test_health_checker.py  test_product_extractor.py  test_scrape_logger.py  test_session.py
