[project]
name = "shopee-scraper"
version = "0.2.0"
description = "High-performance Shopee scraper using Camoufox anti-detect browser"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["shopee", "scraper", "camoufox", "web-scraping", "anti-detect"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core - Camoufox browser automation
    "camoufox>=0.4.0",
    "playwright>=1.40.0",
    # Async support
    "asyncio>=3.4.3",
    "aiofiles>=23.2.0",
    # Configuration & validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    # Storage (for future database implementation)
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    # Utilities
    "structlog>=23.2.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "psutil>=5.9.0",
    # Anti-CAPTCHA (optional - requires API key)
    "2captcha-python>=1.2.0",
    # RESTful API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "slowapi>=0.1.9", # Rate limiting
    # gRPC
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
    "playwright-stealth>=2.0.1",
    "curl-cffi>=0.14.0",
    "nodriver>=0.48.1",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",

    # Type checking
    "mypy>=1.7.0",
    "types-aiofiles>=23.2.0",
    "types-psutil>=5.9.0",

    # Code quality
    "ruff>=0.1.6",
    "pre-commit>=3.6.0",

    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
]

[project.scripts]
shopee-scraper = "shopee_scraper.cli:app"
shopee-api = "shopee_scraper.api.main:app"
shopee-grpc = "shopee_scraper.grpc.server:run_server"

[project.urls]
Homepage = "https://github.com/yourusername/shopee-scraper"
Documentation = "https://github.com/yourusername/shopee-scraper#readme"
Repository = "https://github.com/yourusername/shopee-scraper"
Issues = "https://github.com/yourusername/shopee-scraper/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shopee_scraper"]

# ============================================================================
# Dependency Groups (replaces deprecated tool.uv.dev-dependencies)
# ============================================================================
[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "mypy>=1.7.0",
    "types-aiofiles>=23.2.0",
    "types-psutil>=5.9.0",
    "ruff>=0.1.6",
    "pre-commit>=3.6.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
]

# ============================================================================
# Ruff Configuration
# ============================================================================
[tool.ruff]
target-version = "py310"
line-length = 88
fix = true
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "ERA001",  # commented code (examples for users)
    "PLC0415", # import not at top (lazy loading by design)
    "ARG002",  # unused arguments (for future use)
    "TC001",   # type-checking import (runtime needed)
    "PLW2901", # loop variable overwritten
    "RUF012",  # mutable class attr (by design)
    "B008",    # function call in default argument (FastAPI Query/Path pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "PLR2004"]
"scripts/**/*.py" = ["T201"]
"src/shopee_scraper/grpc/*_pb2*.py" = ["ALL"]  # Generated protobuf files

[tool.ruff.lint.isort]
known-first-party = ["shopee_scraper"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "-p", "no:warnings",
]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# ============================================================================
# MyPy Configuration
# ============================================================================
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "camoufox.*",
    "playwright.*",
    "grpc.*",
    "grpcio.*",
    "google.protobuf.*",
]
ignore_missing_imports = true

# ============================================================================
# Coverage Configuration
# ============================================================================
[tool.coverage.run]
source = ["src/shopee_scraper"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
